--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   },
   "homepage": "https://github.com/coder-arena/github-codespaces-typescript#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.9",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
